[package]
name = "sequences"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sequences"
crate-type = ["cdylib"]

[dependencies]
bitflags = "1.3.2"
itertools = "0.10.5"
pyo3 = { version = "0.17.3", features = ["extension-module"] }
seal = { git = "ssh://git@github.com:22/zpencerq/rust-seal.git", version = "0.1.5" }

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]
